fix overflow hidden on overlay open on desktop

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,6 +3,10 @@
 
 .home{
     padding-bottom: 7.5rem;
+
+    &__subnav{
+        margin-top: 9.25rem;
+    }
 }
 
 .hero{
